# ML-Research-RAG-Assistant

./: .gitignore  README.md  app.py  main.py  pyproject.toml
config/: app.yaml
evaluation/: demo_queries.md  labeled_queries.jsonl
logs/: events.jsonl
scripts/: evaluate.py  index_papers.py
src/: __init__.py  chunking.py  citations.py  config.py  ingest_pdf.py  llm.py  logging_utils.py  pipeline.py  prompts.py  retrieval.py  router.py  vectorstore.py
tests/: __init__.py  test_chunking.py  test_citations.py  test_metadata.py  test_router.py
